# rustjitmodelica

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  EXTERNAL_FUNCTION_ABI.md  FMI_README.md  JIT_DEVELOPMENT_ANALYSIS.md  MSL_SUBSET.md  MSL_VERSION.md  OMC_COMPARISON.md  OPENMODELICA_ALIGNMENT_COVERAGE.md  OPENMODELICA_ALIGNMENT_TASKS.md  OPENMODELICA_FULL_ALIGNMENT_TASKS.md  OPENMODELICA_VS_RUSTMODLICA.md  OPTIMIZATION_PLAN.md  OPTIMIZATION_PLAN_CN.md  README.md  REGRESSION_CASES.txt  REGRESSION_RESULTS.txt  Test.c  TestLib_COMPILER_ISSUES.md  benchmark_newton_sparse.ps1  compare_omc.ps1  compare_omc_sync.ps1  complex.mo  debug_log.txt  diff2_sub_debug.txt  findings.md  fluid_1d.mo  fluid_loop.mo  fluid_tank.mo  iderequirest.md  merge_regress_summary.ps1  pendulum.mo  progress.md  run_jit_rules_full_regress.ps1  run_jitstress_regress.ps1  run_modelica_dir_regression.ps1  run_modelica_dir_validate.ps1  (+13 more)
crates/regress-harness/: Cargo.toml
crates/regress-harness/examples/: jit_phase1_from_run_regression.json  jit_phase2_overlay_example.json  mos_from_run_mos_regression.json  regress_determinism.json  regress_full.json  regress_full_cache_on.json  regress_modelicatest.json  regress_modelicatest_mirror.json  regress_msl_broad.json  regress_quick.json  regress_smoke_v2.json  regress_solver_cross.json  smoke.json  testlib_from_run_regression.json  with_omc_compare.json
crates/regress-harness/schema/: regress_config.v1.json
crates/regress-harness/scripts/: Compare-JitValidatePerf.ps1  Export-RegressConfigFromPs1.ps1  Invoke-JitCoverageGate.ps1  Invoke-JitDirRegression.ps1  Invoke-JitEventScanMatrix.ps1  (+5 more)
jit-compiler/: Cargo.toml  DEPENDENCY_EPOCH_DESIGN.md  EQUATION_COMPONENT_DEPENDENCY_DESIGN.md  REGRESSION_CASES.txt  _flat_arr.json  build.rs  jit_traceability.json
jit-compiler/TestLib/: AdaptiveRKTest.mo  AlgTest.mo  AlgorithmElseWhen.mo  AliasChainPkg.mo  AliasChainTypeMismatch.mo  AliasRemoval.mo  AnnotationParse.mo  ArrayAndScalarOutputs.mo  ArrayArgTest.mo  ArrayLoopTest.mo  ArrayTest.mo  AssertTerminateTest.mo  BLTTest.mo  BackSampleClockTest.mo  BackendDaeInfo.mo  BadConnect.mo  BigFor.mo  BouncingBall.mo  Capacitor.mo  Child.mo  ChildWithMod.mo  Circuit.mo  ClockedInvalidFactorClampTest.mo  ClockedNestedSubSuperTest.mo  ClockedPartitionTest.mo  ClockedStartAndBackSampleTest.mo  ClockedStartAndShiftTest.mo  ClockedStartAndSubSampleTest.mo  ClockedStartAndSuperSampleTest.mo  ClockedStartShiftThenBackSampleTest.mo  ClockedStartShiftThenSubSampleTest.mo  ClockedStartShiftThenSuperSampleTest.mo  ClockedTwoRates.mo  ComponentLibraryCoverage.mo  ComprehensionAndScalarOutputs.mo  ConnA.mo  ConnB.mo  ConstrainedByRedeclarePerf.mo  Container.mo  CrossLayerComprehensionOutputs.mo  (+111 more)
jit-compiler/golden_flat_snapshots/: ModelicaTest_RedeclareSmoke_ConstrainedUsage.json  ModelicaTest_RedeclareSmoke_EachModifierSmoke.json  ModelicaTest_RedeclareSmoke_PublicModifierSmoke.json  ModelicaTest_RedeclareSmoke_RedeclareExtendsExample.json  ModelicaTest_RedeclareSmoke_RedeclareViaExtendsSmoke.json
jit-compiler/msl-pack-bake/: leaves-default.toml
jit-compiler/scripts/: MSL_VALIDATE_FAILURE_PLAYBOOK.md  analyze_dir_sim_failed.ps1  bucket_dir_summary.ps1  compare_newton_symbolic_perf.ps1  compare_salsa_flatten_speed_dcpm.ps1  coverage_status.json  diff_flat_snapshots.ps1  dir_smoke_analyze.ps1  extract_failed_from_ndjson.ps1  generate_coverage_status.ps1  modelica34_core_coverage_matrix.txt  modelica_test_acceptance.ps1  mos_signal_coverage_matrix.txt  msl_acceptance.ps1  msl_acceptance_cases.txt  msl_acceptance_cases_single.txt  msl_smoke_models.txt  omc_regression_algorithm_elsewhen.mos  omc_regression_direction_switch_stream.mos  omc_regression_elseif_nested_for.mos  omc_regression_for_range.mos  omc_regression_if_for.mos  omc_regression_mixed_simulate_args.mos  omc_regression_named_simulate.mos  omc_regression_newton_symbolic_dense.mos  omc_regression_newton_symbolic_sparse.mos  omc_regression_reverse_range.mos  omc_regression_simulate_named_combo.mos  omc_regression_stream_semantics.mos  omc_regression_sync_signal.mos  omc_regression_sync_super_shift.mos  perf_baseline.ps1  run_event_scan_matrix.ps1  run_flat_snapshot_regress.ps1  run_mos_regression.ps1  run_msl_dir_failures_14.ps1  run_omc_instantiate_flat.ps1  run_redeclare_smoke.ps1  run_testlib_validate.ps1  run_three_failures_single.ps1  (+5 more)
jit-compiler/src/: annotation.rs  api.rs  ast.rs  backend_dae.rs  codegen.rs  compiler.rs  diag.rs  equation_graph.rs  error.rs  expr_eval.rs  fmi.rs  i18n.rs  lib.rs  loader.rs  loader_compat.rs  main.rs  main_helpers.rs  math_fft.rs  modelica.pest  modelica_random.rs  mos.pest  newton_policy.rs  script.rs  simulation.rs  solvable_limits.rs  solver.rs  sparse_solve.rs  string_intern.rs  unparse.rs
(+779 files in other folders)
