[package]
name = "rustmodlica"
version = "0.9.0"
edition = "2021"

[lib]
name = "rustmodlica"
path = "src/lib.rs"

[[bin]]
name = "rustmodlica"
path = "src/main.rs"

[features]
default = []
# SUNDIALS CVODE/IDA/KINSOL via sundials-sys (system install or enable `sundials-vendor`).
sundials = ["dep:sundials-sys", "dep:libc"]
sundials-vendor = ["sundials", "sundials-sys/build_libraries"]
# SUNLinSol KLU + sparse Jacobian matrix (SuiteSparse KLU); heavy dependency.
sundials-klu = ["sundials", "sundials-sys/klu"]

[dependencies]
anyhow = "1.0.102"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3.3"
rusqlite = { version = "0.31.0", features = ["bundled"] }
shared_memory = "0.12.4"
libloading = "0.8"
cranelift = "0.128.3"
cranelift-frontend = "0.128.3"
cranelift-jit = "0.128.3"
cranelift-module = "0.128.3"
cranelift-native = "0.128.3"
cranelift-object = "0.128.3"
pest = "2.8.6"
pest_derive = "2.8.6"
petgraph = "0.6"
thiserror = "2.0.18"
realfft = "3.4"
# Sparse LU for CSR Newton (see sparse_solve / native rustmodlica_solve_linear_csr).
faer = { version = "0.24", default-features = false, features = ["std", "sparse-linalg"] }
libc = { version = "0.2", optional = true }
sundials-sys = { version = "0.6.2", optional = true, default-features = false, features = ["cvode", "ida", "kinsol"] }
