[package]
name = "regress-harness"
version = "0.1.0"
edition = "2021"
description = "JSON-driven regression runner for rustmodlica (parallel, incremental reports, OMC CSV compare)"

[[bin]]
name = "regress-harness"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
chrono = { version = "0.4", default-features = false, features = ["clock", "std", "serde"] }
clap = { version = "4.5", features = ["derive"] }
glob = "0.3"
indicatif = "0.18.4"
inquire = "0.7"
rayon = "1.10"
regex = "1.11"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
thiserror = "2.0"
unicode-width = "0.2"
wait-timeout = "0.2"
